add style lint, add jest

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,5 +1,5 @@
 :root {
-    --font-family-main: Circe, 'Arial', sens-serif;
+    --font-family-main: circe, 'Arial', sens-serif;
     --font-size-m: 16px;
     --font-size-l: 24px;
     --font-height: 1.5;
