fix scss linter

--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -1,15 +1,15 @@
 .Sidebar {
-    padding: 20px;
-    background-color: var(--inverted-background-color);
-    width: var(--sidebar-width);
-    height: calc(100vh - var(--navbar-height));
-    transition: width .3s;
+  padding: 20px;
+  background-color: var(--inverted-background-color);
+  width: var(--sidebar-width);
+  height: calc(100vh - var(--navbar-height));
+  transition: width 0.3s;
 }
 
 .collapsed {
-    width: var(--sidebar-width-collapsed);
+  width: var(--sidebar-width-collapsed);
 }
 
 .switcher {
-    display: flex;
+  display: flex;
 }
