--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -4,25 +4,25 @@
 @import "theme/dark";
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    min-height: 100vh;
-    font: var(--font-m)
+  min-height: 100vh;
+  font: var(--font-m);
 }
 
 .app {
-    min-height: 100vh;
-    background: var(--background-color);
-    color: var(--primary-color);
+  min-height: 100vh;
+  background: var(--background-color);
+  color: var(--primary-color);
 }
 
 .content-page {
-    display: flex;
+  display: flex;
 }
 
 .inner-page {
-    padding: 20px;
-    flex-grow: 1;
+  padding: 20px;
+  flex-grow: 1;
 }
