--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,13 +1,13 @@
 :root {
-    --font-family-main: circe, 'Arial', sens-serif;
-    --font-size-m: 16px;
-    --font-size-l: 24px;
-    --font-height: 1.5;
-    --font-m: var(--font-size-m) / var(--font-height) var(--font-family-main);
-    --font-l: var(--font-size-l) / var(--font-height) var(--font-family-main);
+  --font-family-main: circe, "Arial", sens-serif;
+  --font-size-m: 16px;
+  --font-size-l: 24px;
+  --font-height: 1.5;
+  --font-m: var(--font-size-m) / var(--font-height) var(--font-family-main);
+  --font-l: var(--font-size-l) / var(--font-height) var(--font-family-main);
 
-    // Размеры
-    --navbar-height: 80px;
-    --sidebar-width: 300px;
-    --sidebar-width-collapsed: 80px;
+  // Размеры
+  --navbar-height: 80px;
+  --sidebar-width: 300px;
+  --sidebar-width-collapsed: 80px;
 }
